--- a/.github/workflows/assets_validation.yml
+++ b/.github/workflows/assets_validation.yml
@@ -1,6 +1,8 @@
 name: Validating the Building of Public Assets
 
-on: 
+on:
+  # Run it on main and release pushes too, in case we merge from a branch that's not up-to-date with the target branch
+  # and breaks something after merge (or if we push to main).
   push:
     paths-ignore:
       - '**/*.md'
@@ -27,7 +29,6 @@ jobs:
     - name: Check if git has changes
       shell: pwsh
       run: |
-        # git config core.autocrlf false && git config core.filemode true 
         $changes = git status --porcelain
 
         if ($changes)
@@ -38,6 +39,7 @@ jobs:
             Write-Output 'You can also download the attached artifact to see the changes.'
             Write-Output ''
             Write-Output '---------------------------------------'
+            Write-Output ''
         
             $changeLines = $changes -split '`n'
             $changedFiles = @()
@@ -82,6 +84,7 @@ jobs:
         
                     $changedFiles += $file
         
+                    Write-Output ''
                     Write-Output '---------------------------------------'
                     Write-Output ''
                 }
@@ -111,4 +114,3 @@ jobs:
         name: changed-files
         path: ${{ env.CHANGED_FILES }}
         retention-days: 30
-        
