--- a/.github/workflows/pr_ci.yml
+++ b/.github/workflows/pr_ci.yml
@@ -1,7 +1,7 @@
 name: PR - CI
 on: 
   pull_request:
-    branches: [ main, main*, release/** ]
+    branches: [ main, release/** ]
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -21,28 +21,16 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: "15"
-    - name: Setup .NET 8.0
     - uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
-        include-prerelease: true
+        dotnet-version: '8.0.x'
     - name: Build
+      # We disable NuGet audit warnings, see https://learn.microsoft.com/en-us/nuget/reference/errors-and-warnings/nu1901-nu1904.
+      # Security issues being discovered in NuGet packages we use can happen at any time, and thus all our CI builds that
+      # treat warnings as errors could break anytime, without us changing the code. This prevents that. Treating them as
+      # warnings and other better approaches don't work, see https://github.com/OrchardCMS/OrchardCore/pull/16317.
       run: |
-        dotnet build -c Release -warnaserror /p:TreatWarningsAsErrors=true /p:RunAnalyzers=true
+        dotnet build -c Release -warnaserror /p:TreatWarningsAsErrors=true /p:RunAnalyzers=true /p:NuGetAudit=false
     - name: Unit Tests
       run: |
-        dotnet test -c Release --no-restore --no-build ./tests/DealerSolutions.Tests/DealerSolutions.Tests.csproj
-    #- name: Functional Tests
-    #  if: matrix.os == 'ubuntu-latest'
-    #  run: |
-    #    cd tests/DealerSolutions.Tests.Functional
-    #    npm install
-    #    npm run mvc:test
-    #- uses: actions/upload-artifact@v2
-    #  if: matrix.os == 'ubuntu-latest' && failure()
-    #  with:
-    #    name: functional-test-failure
-    #    path: |
-    #      tests/CloudSolutions.Tests.Functional/cms-tests/cypress/screenshots
-    #      src/DealerSolutions.Web/App_Data/logs
-  
+        dotnet test -c Release --no-build ./Test/CrestApps.OrchardCore.Tests/CrestApps.OrchardCore.Tests.csproj
