Include icon in the build

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Content Include="CrestAppsLogo.png" />
+    <None Include="CrestAppsLogo.png" Pack="true" PackagePath=""/>
   </ItemGroup>
 
   <PropertyGroup>
