--- a/src/Modules/CrestApps.OrchardCore.Users/CrestApps.OrchardCore.Users.csproj
+++ b/src/Modules/CrestApps.OrchardCore.Users/CrestApps.OrchardCore.Users.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.Users.Core\CrestApps.OrchardCore.Users.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="CrestAppsLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
