--- a/src/Core/CrestApps.OrchardCore.Abstractions/CrestApps.OrchardCore.Abstractions.csproj
+++ b/src/Core/CrestApps.OrchardCore.Abstractions/CrestApps.OrchardCore.Abstractions.csproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace("Abstractions",""))</RootNamespace>
+    <Title>CrestApps OrchardCore Abstractions</Title>
+    <Description>
+      $(OCCMSDescription)
+
+      Abstractions project for core services.
+    </Description>
+    <PackageTags>$(PackageTags) CrestApps OrchardCoreCMS Abstractions</PackageTags>
   </PropertyGroup>
 
 </Project>
