--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -18,6 +18,14 @@
   </ItemGroup>
 
   <PropertyGroup>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
+  <PropertyGroup>
     <VersionPrefix>2.0.0</VersionPrefix>
     <VersionSuffix>preview</VersionSuffix>
     <VersionSuffix Condition="'$(VersionSuffix)' != '' AND '$(BuildNumber)' != ''">$(VersionSuffix)-$(BuildNumber)</VersionSuffix>
@@ -87,6 +95,4 @@
     <NoWarn>$(NoWarn),1573,1591,1712</NoWarn>
 
   </PropertyGroup>
-
-
 </Project>
