--- a/src/Startup/CrestApps.OrchardCore.Cms.Web/CrestApps.OrchardCore.Cms.Web.csproj
+++ b/src/Startup/CrestApps.OrchardCore.Cms.Web/CrestApps.OrchardCore.Cms.Web.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Modules\CrestApps.OrchardCore.Users\CrestApps.OrchardCore.Users.csproj" />
+    <ProjectReference Include="..\..\Modules\OrchardCore.CrestApps.Subscriptions\OrchardCore.CrestApps.Subscriptions.csproj" />
   </ItemGroup>
 
 </Project>
