--- a/src/Modules/OrchardCore.CrestApps.Subscriptions/OrchardCore.CrestApps.Subscriptions.csproj
+++ b/src/Modules/OrchardCore.CrestApps.Subscriptions/OrchardCore.CrestApps.Subscriptions.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.Abstractions\CrestApps.OrchardCore.Abstractions.csproj" />
     <ProjectReference Include="..\..\Core\OrchardCore.CrestApps.Subscriptions.Core\OrchardCore.CrestApps.Subscriptions.Core.csproj" />
   </ItemGroup>
 
