--- a/src/Modules/OrchardCore.CrestApps.Subscriptions/OrchardCore.CrestApps.Subscriptions.csproj
+++ b/src/Modules/OrchardCore.CrestApps.Subscriptions/OrchardCore.CrestApps.Subscriptions.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="OrchardCore.ContentManagement" />
     <PackageReference Include="OrchardCore.ContentTypes.Abstractions" />
     <PackageReference Include="OrchardCore.DisplayManagement" />
+    <PackageReference Include="OrchardCore.Navigation.Core" />
   </ItemGroup>
 
   <ItemGroup>
