--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -8,6 +8,8 @@
     <Company>CrestApps</Company>
     <PackageIcon>CrestAppsLogo.png</PackageIcon>
     <IsPackable>true</IsPackable>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/CrestApps/CrestApps.OrchardCore</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -85,6 +87,4 @@
     <NoWarn>$(NoWarn),1573,1591,1712</NoWarn>
 
   </PropertyGroup>
-
-
 </Project>
