--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -26,6 +26,7 @@
     <PackageVersion Include="OrchardCore.ContentFields" Version="2.0.0-preview-18287"/>
     <PackageVersion Include="OrchardCore.ContentManagement" Version="2.0.0-preview-18287"/>
     <PackageVersion Include="OrchardCore.ContentManagement.Abstractions" Version="2.0.0-preview-18287"/>
+    <PackageVersion Include="OrchardCore.ContentManagement.Display" Version="2.0.0-preview-18287"/>
     <PackageVersion Include="OrchardCore.ContentTypes" Version="2.0.0-preview-18287"/>
     <PackageVersion Include="OrchardCore.ContentTypes.Abstractions" Version="2.0.0-preview-18287"/>
     <PackageVersion Include="OrchardCore.Contents" Version="2.0.0-preview-18287"/>
