add process confirmation and refactor handlers

--- a/src/Core/CrestApps.OrchardCore.Subscriptions.Abstractions/CrestApps.OrchardCore.Subscriptions.Abstractions.csproj
+++ b/src/Core/CrestApps.OrchardCore.Subscriptions.Abstractions/CrestApps.OrchardCore.Subscriptions.Abstractions.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="OrchardCore.DisplayManagement" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\CrestApps.Support\CrestApps.Support.csproj" />
+  </ItemGroup>
+
 </Project>
