--- a/src/Modules/CrestApps.OrchardCore.Stripe/CrestApps.OrchardCore.Stripe.csproj
+++ b/src/Modules/CrestApps.OrchardCore.Stripe/CrestApps.OrchardCore.Stripe.csproj
@@ -2,15 +2,11 @@
 
   <PropertyGroup>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Views\Subscriptions.Summary.cshtml" />
-    <Content Remove="Views\SubscriptionsPart.cshtml" />
-    <Content Remove="Views\SubscriptionsPart.Edit.cshtml" />
-    <Content Remove="Views\SubscriptionsSignup.cshtml" />
-    <Content Remove="Views\Subscriptions\Index.cshtml" />
-    <Content Remove="Views\_ViewImports.cshtml" />
+    <Content Remove="CrestAppsLogo.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,14 +18,15 @@
     <PackageReference Include="OrchardCore.ContentManagement" />
     <PackageReference Include="OrchardCore.ContentTypes.Abstractions" />
     <PackageReference Include="OrchardCore.DisplayManagement" />
-    <PackageReference Include="OrchardCore.Navigation.Core" />
-    <PackageReference Include="OrchardCore.Title" />
+    <PackageReference Include="Stripe.net" />
+    <PackageReference Include="OrchardCore.Users.Core" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.Abstractions\CrestApps.OrchardCore.Abstractions.csproj" />
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.Stripe.Core\CrestApps.OrchardCore.Stripe.Core.csproj" />
-    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.Subscriptions.Core\CrestApps.OrchardCore.Subscriptions.Core.csproj" />
+    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.Users.Abstractions\CrestApps.OrchardCore.Users.Abstractions.csproj" />
+    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.Users.Core\CrestApps.OrchardCore.Users.Core.csproj" />
   </ItemGroup>
 
 </Project>
