starting to add tenant onboarding

--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/CrestApps.OrchardCore.Subscriptions.csproj
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/CrestApps.OrchardCore.Subscriptions.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="OrchardCore.DisplayManagement" />
     <PackageReference Include="OrchardCore.Navigation.Core" />
     <PackageReference Include="OrchardCore.Title" />
+    <PackageReference Include="OrchardCore.Users.Core" />
   </ItemGroup>
 
   <ItemGroup>
