fix merge conflicts

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -6,6 +6,9 @@
     <OrchardCoreVersion>2.0.0-preview-18296</OrchardCoreVersion>
   </PropertyGroup>
   <ItemGroup>
+    <!-- Miscellaneous Packages-->
+    <PackageVersion Include="Stripe.net" Version="45.6.0 " />
+
     <!-- OrchardCore Packages -->
     <PackageVersion Include="OrchardCore.DisplayManagement.Abstractions" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="OrchardCore.DisplayManagement" Version="$(OrchardCoreVersion)"/>
@@ -19,11 +22,13 @@
     <PackageVersion Include="OrchardCore.ContentTypes.Abstractions" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="OrchardCore.ContentManagement" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="OrchardCore.ContentManagement.Abstractions" Version="$(OrchardCoreVersion)"/>
+    <PackageVersion Include="OrchardCore.ContentManagement.Display" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="OrchardCore.Media" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="OrchardCore.Module.Targets" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="OrchardCore.Navigation.Core" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="OrchardCore.Logging.NLog" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="OrchardCore.Application.Cms.Core.Targets" Version="$(OrchardCoreVersion)"/>
+    <PackageVersion Include="OrchardCore.Title" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="TheAdmin" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="TheTheme" Version="$(OrchardCoreVersion)"/>
     <PackageVersion Include="SafeMode" Version="$(OrchardCoreVersion)"/>
